--- a/code/preprocessing.ipynb
+++ b/code/preprocessing.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,13 +52,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove some characters\n",
+    "\n",
+    "df['Cuisine Style'] = df['Cuisine Style'].replace(r\"'\", r\"\", regex=True)\n",
+    "df['Cuisine Style'] = df['Cuisine Style'].replace(r\"\\[\", r\"\", regex=True)\n",
+    "df['Cuisine Style'] = df['Cuisine Style'].replace(r\"]\", r\"\", regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# add space between Cuisine Style items\n",
+    "\n",
+    "df['Cuisine Style'] = df['Cuisine Style'].replace(r\",\", r\", \", regex=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change Price Range values\n",
+    "\n",
+    "df['Price Range'] = df['Price Range'].replace(r\"$\", r\"Bargain\")\n",
+    "df['Price Range'] = df['Price Range'].replace(r\"$$ - $$$\", r\"Reasonable\")\n",
+    "df['Price Range'] = df['Price Range'].replace(r\"$$$$\", r\"High-end\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "# save processed dataframe to new csv\n",
     "\n",
     "df.to_csv('../data/TA_restaurants_curated_processed.csv', index=False, header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter dataframe for highest Rating\n",
+    "\n",
+    "df_5 = df[df['Rating'] == 5.0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# save filtered dataframe to new csv\n",
+    "\n",
+    "df_5.to_csv('../data/TA_restaurants_curated_filtered.csv', index=False, header=True)"
    ]
   }
  ],
