clean code and dashboard

--- a/code/best_restaurants.ipynb
+++ b/code/best_restaurants.ipynb
@@ -1,14 +1,31 @@
 {
  "cells": [
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Import `pandas` library and load filtered dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import libraries\n",
+    "import pandas as pd\n",
     "\n",
-    "import pandas as pd"
+    "dataset = '../data/TA_restaurants_curated_filtered.csv'\n",
+    "df = pd.read_csv(dataset)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Transform `Reviews` column"
    ]
   },
   {
@@ -17,61 +34,53 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load dataset\n",
+    "# replace empty reviews\n",
+    "df['Reviews'] = df['Reviews'].replace(r\"[[], []]\", r\"No review\")\n",
     "\n",
-    "dataset = '../data/TA_restaurants_curated_filtered.csv'\n",
-    "df = pd.read_csv(dataset)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['Reviews'] = df['Reviews'].replace(r\"[[], []]\", r\"No review\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# remove some characters\n",
     "df['Reviews'] = df['Reviews'].replace(r\"\\[\", r\"\", regex=True)\n",
     "df['Reviews'] = df['Reviews'].replace(r\"]\", r\"\", regex=True)"
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Create `Dashboard Review` column from first review"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "review_db = []\n",
     "\n",
+    "# loop through Reviews column\n",
     "for item in df['Reviews']:\n",
-    "    review_list = item.split(\"'\")\n",
-    "    if len(review_list[0]) > 0:\n",
-    "        review_db.append(review_list[0])\n",
+    "    review_list = item.split(\"'\") # split item into list\n",
+    "    if len(review_list[0]) > 0: # find first non-empty list item\n",
+    "        review_db.append(review_list[0]) # append to review_db list\n",
     "    elif len(review_list[1]) > 0:\n",
     "        review_db.append(review_list[1])\n",
     "    else:\n",
-    "        review_db.append(\"Cannot find review\")"
+    "        review_db.append(\"Cannot find review\")\n",
+    "df['Dashboard Review'] = review_db # transform review_db list to Dashboard Review column"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "df['Dashboard Review'] = review_db"
+    "## Drop unnecessary columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,8 +90,16 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Save processed filtered dataset to new csv"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
